force-app/main/default/objects/Lead/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ number of Company.</description>
    <label>CNPJ</label>
    <length>60</length>
    <type>Text</type>
</CustomField>