force-app/main/default/objects/Lead/fields/Event_Series__c.field-meta.xml
<CustomField>
    <fullName>Event_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Series of Edition for which lead is captured.</description>
    <label>Event Series</label>
    <referenceTo>Series__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>